--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "net.ossrs.yasea.demo"
         minSdkVersion 18
-        targetSdkVersion 26
+        targetSdkVersion 31
         versionCode 1
         versionName "2.6"
         ndk {
@@ -36,6 +36,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libx264.libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation project(path: ':library')
 }
